--- a/notes/mental_health.ipynb
+++ b/notes/mental_health.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b4205bf4",
+   "id": "bd407653",
    "metadata": {},
    "source": [
     "# Import Libraries"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9633e1b5",
+   "id": "5af137ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "15190791",
+   "id": "5df852fa",
    "metadata": {},
    "outputs": [
     {
@@ -46,8 +46,8 @@
     "\n",
     "import json\n",
     "\n",
-    "username = \"marziehphi\" #@param {type: \"string\"}\n",
-    "api_key = \"811c3da8b6395340e3edb6d484c7943a\" #@param {type: \"string\"}\n",
+    "username = \"xxx\" #@param {type: \"string\"}\n",
+    "api_key = \"xxx\" #@param {type: \"string\"}\n",
     "\n",
     "\n",
     "if username and api_key:\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "316ce258",
+   "id": "3364761d",
    "metadata": {},
    "outputs": [
     {
@@ -80,13 +80,13 @@
    ],
    "source": [
     "!mkdir -p /content/data/\n",
-    "!kaggle datasets download -d osmi/mental-health-in-tech-survey\n",
+    "!kaggle datasets download -d xxx\n",
     "!unzip -q mental-health-in-tech-survey.zip -d /content/data/"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c310fef8",
+   "id": "700fb8e2",
    "metadata": {},
    "source": [
     "# Initial Understanding of the data\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "39dc9d26",
+   "id": "dbf90bc3",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d3590e63",
+   "id": "2a200b48",
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47f403a7",
+   "id": "73c5b190",
    "metadata": {},
    "outputs": [
     {
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a66c04c7",
+   "id": "39d3febf",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75b628a7",
+   "id": "b0c361ca",
    "metadata": {},
    "source": [
     "# Dropping misleading columns\n",
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "365f9fdf",
+   "id": "901b8403",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "27651c70",
+   "id": "d3ed1cd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7664e582",
+   "id": "01cdfa01",
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "70d2fdab",
+   "id": "4531117f",
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41cc2827",
+   "id": "63c3f38e",
    "metadata": {},
    "source": [
     "# modification of the age and gender columns\n",
@@ -1198,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a030dba3",
+   "id": "26ebd2e6",
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d2b6601e",
+   "id": "11387e13",
    "metadata": {},
    "outputs": [
     {
@@ -1334,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "89965a13",
+   "id": "feb61bcd",
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1378,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c6bf70ea",
+   "id": "a997212f",
    "metadata": {},
    "outputs": [
     {
@@ -1746,7 +1746,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "650235f4",
+   "id": "94c64017",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1757,7 +1757,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "44c3e2f2",
+   "id": "88494685",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8000bd4b",
+   "id": "79af10b6",
    "metadata": {},
    "outputs": [
     {
@@ -1976,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ba77d938",
+   "id": "b491f177",
    "metadata": {},
    "outputs": [
     {
@@ -2018,7 +2018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1e29748",
+   "id": "958ba2f8",
    "metadata": {},
    "source": [
     "# Data Analysis and Inferences\n",
@@ -2027,7 +2027,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a435fbd4",
+   "id": "d3f06228",
    "metadata": {},
    "source": [
     "# How many peopel seeking for mental health treatment.\n",
@@ -2038,7 +2038,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4a87b8e3",
+   "id": "1933401d",
    "metadata": {},
    "outputs": [
     {
@@ -2073,7 +2073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28bf58c3",
+   "id": "654c4400",
    "metadata": {},
    "source": [
     "# Employees mindset on treatment with/without family mental health\n",
@@ -2085,7 +2085,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9e51c9cf",
+   "id": "68096b9d",
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce669661",
+   "id": "97cbc67e",
    "metadata": {},
    "source": [
     "# Checking the relation between type of employment and willingness for treatment.\n",
@@ -2135,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "e9a9b2e4",
+   "id": "e5637e0b",
    "metadata": {},
    "outputs": [
     {
@@ -2171,7 +2171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f48f4e5",
+   "id": "d8421e2c",
    "metadata": {},
    "source": [
     "# Type of working of employees and their willingness to take action for treatment.\n",
@@ -2183,7 +2183,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "149b5bab",
+   "id": "8554d4fb",
    "metadata": {},
    "outputs": [
     {
@@ -2219,7 +2219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8a1de8e",
+   "id": "4ff1b502",
    "metadata": {},
    "source": [
     "# Mental Health condition of employees interferes with their work\n",
@@ -2234,7 +2234,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "91071529",
+   "id": "e736751c",
    "metadata": {},
    "outputs": [
     {
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa32b939",
+   "id": "72240f9a",
    "metadata": {},
    "source": [
     "# Companies benefits for mental treatment of employees\n",
@@ -2293,7 +2293,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "08d2ee51",
+   "id": "99509126",
    "metadata": {},
    "outputs": [
     {
@@ -2328,7 +2328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab83ad35",
+   "id": "c68917d0",
    "metadata": {},
    "source": [
     "# Wellness Program for helping mental health disorder\n",
@@ -2339,7 +2339,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "8bda8cf0",
+   "id": "6b51c085",
    "metadata": {},
    "outputs": [
     {
@@ -2374,7 +2374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b12e251d",
+   "id": "61ef43e0",
    "metadata": {},
    "source": [
     "# How easy for employees to take medical leave for mental issue.\n",
@@ -2386,7 +2386,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "1409413f",
+   "id": "c3bee985",
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db74e5e2",
+   "id": "d8335a7b",
    "metadata": {},
    "source": [
     "**Anonymity of employees is an imporatnt factor to let them sharing their mental health condition**"
@@ -2429,7 +2429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02d165a5",
+   "id": "6ddde158",
    "metadata": {},
    "source": [
     "# Is employee anonymity protected if he/she wants to share her/his mental health disorder.\n",
@@ -2441,7 +2441,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "f862fd62",
+   "id": "8f38fb4e",
    "metadata": {},
    "outputs": [
     {
@@ -2476,7 +2476,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81c4679f",
+   "id": "2b047ea0",
    "metadata": {},
    "source": [
     "# consequence of discussing mental health disorder .\n",
@@ -2488,7 +2488,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82e32aa",
+   "id": "8c917c79",
    "metadata": {},
    "source": [
     "## 1.Discussing mental health with coworkers\n",
@@ -2499,7 +2499,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "a54a11ae",
+   "id": "ddc9ef1e",
    "metadata": {},
    "outputs": [
     {
@@ -2534,7 +2534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e837d852",
+   "id": "944950e7",
    "metadata": {},
    "source": [
     "## 2.Discussing mental health with direct supervisior\n",
@@ -2544,7 +2544,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "53ed9098",
+   "id": "740ce62f",
    "metadata": {},
    "outputs": [
     {
@@ -2579,7 +2579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e42f82f0",
+   "id": "79460dd7",
    "metadata": {},
    "source": [
     "# 3.Discussing Mental health with employers\n",
@@ -2591,7 +2591,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b295f728",
+   "id": "2d524784",
    "metadata": {},
    "outputs": [
     {
@@ -2626,7 +2626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b35813e1",
+   "id": "c8406c53",
    "metadata": {},
    "source": [
     "# look at relation between mental health and physical health of employers\n",
@@ -2637,7 +2637,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "f7331d1e",
+   "id": "11b72864",
    "metadata": {},
    "outputs": [
     {
